# Apmatia

./: .env.example  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  requirements.txt  run.py  start.sh  stop.sh  test.sh
src/api/http/: app.py  routes.py
src/api/internal/: auth.py  discussions.py  group_access.py  prompt_LLM.py  settings.py  user_management.py
src/core/: app_config.py  config_persistence.py  discussion_templates.py  discussions.py  group_access.py  prompt_LLM.py  settings_service.py  user_management_runtime.py
src/core/user_management/: ARCHITECTURE.md  __init__.py  auth.py  module.py  repositories.py  (+3 more)
src/lib/persistence/: pyproject.toml
src/lib/persistence/persistence/core/: config.py  sqlite_store.py
src/libraries/ysparr/: pyproject.toml
src/libraries/ysparr/ysparr.egg-info/: SOURCES.txt  top_level.txt
src/libraries/ysparr/ysparr/core/: config.py
src/libraries/ysparr/ysparr/modalities/text2text/: README.md
src/libraries/ysparr/ysparr/modalities/text2text/backends/: __init__.py  koboldcpp_backend.py  openai_compatible_backend.py
src/libraries/ysparr/ysparr/modalities/text2text/templates/: chat_template.py
tests/integration/: test_api.py  test_cli.py  test_user_management_api.py
tests/unit/: test_core.py  test_core_group_access.py  test_core_settings_service.py  test_core_user_management_runtime.py  test_discussions_scope.py  test_internal_api.py  test_internal_user_management_api.py  test_koboldcpp_chat_template.py  test_user_management_auth.py  test_user_management_core.py
(+72 files in other folders)
